[gd_scene load_steps=15 format=3 uid="uid://d3ktip8oatlen"]

[ext_resource type="Script" path="res://Goat.gd" id="1_3rvx2"]
[ext_resource type="Texture2D" uid="uid://s66v1lf3o2lp" path="res://NibblingGoatIdleSide.png" id="2_bv8ng"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crpma"]
size = Vector2(13, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki623"]
atlas = ExtResource("2_bv8ng")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpcbg"]
atlas = ExtResource("2_bv8ng")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_owip8"]
atlas = ExtResource("2_bv8ng")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rdm5"]
atlas = ExtResource("2_bv8ng")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_x6tt6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki623")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpcbg")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_owip8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rdm5")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_nsnjn"]
font_size = 21

[sub_resource type="CircleShape2D" id="CircleShape2D_ui021"]
radius = 62.0081

[sub_resource type="CircleShape2D" id="CircleShape2D_cju2y"]
radius = 29.0172

[sub_resource type="Animation" id="Animation_mwj6b"]
resource_name = "Attack"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_5jqil"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m38ne"]
_data = {
"Attack": SubResource("Animation_mwj6b"),
"RESET": SubResource("Animation_5jqil")
}

[node name="Goat" type="CharacterBody2D" node_paths=PackedStringArray("healthLabel")]
script = ExtResource("1_3rvx2")
healthLabel = NodePath("HealthLabel")
movement_speed = 50.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_crpma")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_x6tt6")
animation = &"Attack"
frame = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
self_modulate = Color(0, 1, 0, 1)
offset_left = -6.0
offset_top = -18.0
offset_right = 114.0
offset_bottom = 9.0
scale = Vector2(0.1, 0.1)
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
offset_left = -1.0
offset_top = -18.0
offset_right = 19.0
offset_bottom = 5.0
scale = Vector2(0.1, 0.1)
text = "10
"
label_settings = SubResource("LabelSettings_nsnjn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpotArea" type="Area2D" parent="."]

[node name="SpotCollision" type="CollisionShape2D" parent="SpotArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_ui021")

[node name="HitArea" type="Area2D" parent="."]

[node name="HitCollision" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_cju2y")

[node name="AttackCD" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m38ne")
}

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_progress_bar_value_changed"]
[connection signal="body_entered" from="SpotArea" to="." method="_on_spot_area_body_entered"]
[connection signal="body_exited" from="SpotArea" to="." method="_on_spot_area_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_hit_area_body_exited"]
[connection signal="timeout" from="AttackCD" to="." method="_on_attack_cd_timeout"]
